# token-optimizer

./: .gitignore  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: optimization-results.md
tests/: test_analyzers.py  test_engine.py  test_metrics.py  test_strategies.py
token_optimizer/: __init__.py  cli.py  config.py  engine.py
token_optimizer/analyzers/: __init__.py  filler.py  redundancy.py  structural.py  verbosity.py
token_optimizer/cache/: __init__.py  prompt_cache.py
token_optimizer/metrics/: __init__.py  calculator.py  similarity.py
token_optimizer/providers/: __init__.py  registry.py
token_optimizer/strategies/: __init__.py  aggressive.py  base.py  conservative.py  custom.py  moderate.py
token_optimizer/tokenizers/: __init__.py  anthropic_tokenizer.py  base.py  gemini_tokenizer.py  generic.py  openai_tokenizer.py
